--- a/hirehub_ui/pubspec.yaml
+++ b/hirehub_ui/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   url_launcher: ^6.3.2
   image_picker: ^1.2.1
+  firebase_core: ^3.11.0
+
 
 dev_dependencies:
   flutter_test:
